--- a/lambda/.env
+++ b/lambda/.env
@@ -1,3 +1,3 @@
-HUGGINGFACE_TOKEN="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"
-NGROK_TOKEN="2vqMRSCTSEBq37VhGbOk6JAvJgV_5WtA9WtuNeSHECiaJkKsb"
+HUGGINGFACE_TOKEN=""
+NGROK_TOKEN=""
 MODEL_NAME=google/gemma-2-2b-jpn-it  # または distilgpt2
